--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,7 +21,8 @@ pytz = "^2023.3.post1"
 pydantic = "2.1.1"
 aiogram = "^3.1.1"
 jinja2 = "^3.1.2"
-aioredis = "^2.0.1"
+celery-redbeat = "^2.1.1"
+redis = "^5.0.1"
 
 [build-system]
 requires = ["poetry-core"]
