db name chanched

--- a/docker/compose/database.yml
+++ b/docker/compose/database.yml
@@ -11,7 +11,7 @@ services:
     env_file:
       - ${PWD}/.env
     environment:
-      POSTGRES_DB: ${DATABASE_NAME}
+      POSTGRES_DATABASE: ${DATABASE_NAME}
       POSTGRES_USER: ${DATABASE_USERNAME}
       POSTGRES_PASSWORD: ${DATABASE_PASSWORD}
     ports:
