--- a/docker/compose/database.yml
+++ b/docker/compose/database.yml
@@ -19,7 +19,7 @@ services:
     expose:
       - ${DATABASE_PORT_EXPOSE}
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U ${DATABASE_USERNAME}"]
+      test: ["CMD-SHELL", "pg_isready -U ${DATABASE_USERNAME} -d ${DATABASE_NAME}"]
       interval: 5s
       timeout: 5s
       retries: 10
